add_executable(BT1)
#add_executable(BT2)
#add_executable(BT3)
#add_executable(BT4)

target_sources(BT1 PRIVATE BT1.cpp)
target_link_libraries(BT1 PRIVATE NgayThangNam)

#target_sources(BT2 PRIVATE BT2.cpp)
#target_link_libraries(BT2 PRIVATE PhanSo)

#target_sources(BT3 PRIVATE BT3.cpp)
#target_link_libraries(BT3 PRIVATE SoPhuc)

#target_sources(BT4 PRIVATE BT4.cpp)
#target_link_libraries(BT4 PRIVATE GioPhutGiay)
